@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+  - fix: concurrent ajax requests caused partition information
+    in table detail view to be mixed up between tables
+
 2015/03/05 0.11.4
 =================
 
